Added homepage pics

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="image" href="local.html">
-                <img src="images/world/5-thumb.png">
+                <img src="images/artists/1-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="local.html">Artists</a>
@@ -134,7 +134,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="image" href="worldwide.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/favorites/3-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="worldwide.html">Rings</a>
@@ -145,7 +145,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="image" href="earrings.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/earrings/1-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="earrings.html">Earrings</a>
@@ -157,7 +157,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="image" href="favorites.html">
-                <img src="images/favorites/2-thumb.png">
+                <img src="images/favorites/1-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="favorites.html">Linda's Favorites</a>
@@ -168,7 +168,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="image" href="bracelets.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/bracelets/5-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="bracelets.html">Bracelets</a>
@@ -180,7 +180,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="image" href="scarves.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/scarves/4-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="scarves.html">Scarves</a>
@@ -191,7 +191,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="image" href="necklaces.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/favorites/4-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="necklaces.html">Necklaces</a>
@@ -202,7 +202,7 @@
           <div class="column product-item">
             <div class="ui card">
               <a class="ui image" href-"deals.html">
-                <img src="images/favorites/1-thumb.png">
+                <img src="images/deals/1-thumb.png">
               </a>
               <div class="content item-main">
                 <a class="header" href="deals.html">Deals</a>
