Added pics to FAQ

--- a/faq.html
+++ b/faq.html
@@ -95,6 +95,14 @@
     
     <h3 class="script">Frequently Asked Questions</h3>
   
+    <div class="ui basic segment center aligned">
+    <div class="ui medium images">
+      <img class="ui image" src="images/faq1.jpg">
+      <img class="ui image" src="images/faq2.jpg">
+      <img class="ui image" src="images/faq3.jpg">
+    </div>
+  </div>
+
     <div class="faq-container">
     <div class="ui list faq-list div-center">
       <a class="item" href="#1" target="_self">What is the difference between estate, vintage, and antique jewelry?</a>
