Added homepage blurb

--- a/index.html
+++ b/index.html
@@ -103,7 +103,11 @@
 <div class="pusher">
   <!-- Main Content -->
   <div class="ui main container">
-    <a name="products"></a>  
+
+    <div class="ui basic center aligned segment">
+      <h3>Welcome to Jewels By The Sea, an eclectic shop for fashion and fine jewelry. My name is Linda Jalving, and I invite you on a treasure hunt &mdash; both in the selection here and in store.</p>
+    </div>
+
     <div class="ui stackable grid">
       <div class="eleven wide column home-grid">
 
@@ -117,7 +121,7 @@
                 <img src="images/estatevintage/1-thumb.png">
               </a>
             </div>
-            
+
           </div>
 
           <div class="column product-item">
@@ -180,7 +184,7 @@
             <div class="ui card">
               <div class="grid-hover">Necklaces</div>
               <a class="image grid-hover-img" href="necklaces.html">
-                <img src="images/favorites/4-thumb.png">
+                <img src="images/necklaves/1-thumb.png">
               </a>
             </div>
           </div>
