--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <div class="ui main container">
 
     <div class="ui basic center aligned segment">
-      <h3>Welcome to Jewels By The Sea, an eclectic shop for fashion and fine jewelry. My name is Linda Jalving, and I invite you on a treasure hunt &mdash; both in the selection here and in store.</p>
+      <h3><i class="fa fa-quote-left fa-2x quote"></i>Welcome to Jewels By The Sea, an eclectic shop for fashion and fine jewelry. My name is Linda Jalving, and I invite you on a treasure hunt &mdash; both in the selection here and in store.</p>
     </div>
 
     <div class="ui stackable grid">
