--- a/visit.html
+++ b/visit.html
@@ -115,8 +115,15 @@
         </div>
 
         <div class="ui basic segment center aligned">
-          <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just <a href="tel:8584595166">give a call!</a></p>
+          <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just <a href="tel:8584595166">give me a call!</a></p>
+
+          <p>1237 Prospect Street, Suite B<br /> La Jolla, CA 92037</p>
+          <p><a href="tel:8584595166"><i class="phone icon"></i>858.459.5166</a></p>
+          <p style="letter-spacing:2px">
+            <a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-envelope-o"></i> linda@jewelsbythesea.biz</a>
+          </p>
         </div>
+
       </div>
 
       <div class="six wide column">
@@ -124,11 +131,9 @@
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3351.857526300825!2d-117.27394304909458!3d32.8490237875237!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80dc03fc4350450f%3A0x41b23c731ac358f4!2sJewels+By+the+Sea!5e0!3m2!1sen!2sus!4v1456196866978"  width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
-      
-
     </div>
 
-
+    <img class="ui huge centered image" src="images/visit1.jpg" />
   </div>
 
   <ng-include src="'partials/footer.html'"></ng-include>
