Implemented desktop navbar

--- a/about.html
+++ b/about.html
@@ -42,26 +42,12 @@
         .sidebar('attach events', '.ui.sidebar', 'show');
     });
   </script>
-<!--
-  <header>
-    <div class="navlinks">
-      <div id="logo"><a href="/"><img class="header-img" src="images/logo.png" /></a></div>
-      <div class="nav-container">
-        <a href="index.html" class="item navlink">Home</a>
-        <a href="about.html" class="active item navlink">About</a>
-        <a href="visit.html" class="item navlink">Visit</a>
-        <a href="index.html#products" class="item navlink">Products</a>
-        <a href="faq.html" class="item navlink">FAQ</a>
-      </div>
-    </div>
-  </header>
--->
-<!-- BEGIN HEADER -->
+<!-- BEGIN MOBILE HEADER -->
 <div class="ui left inverted vertical menu sidebar">
-  <a class="active menu-item first-item" href="index.html">
-    Menu
+  <a class="menu-item first-item" href="index.html">
+    Home
   </a>
-  <a class="menu-item" href="about.html">
+  <a class="menu-item" href="#">
     About
   </a>
   <a class="menu-item" href="visit.html">
@@ -90,17 +76,39 @@
   </a>
 </div>
 
-
 <header>
   <div id="show-sidebar" class="button toggler">
     MENU
-  </div> 
-  <div id="logo">
-    <a href="index.html"><img src="images/logo.png" /></a>
   </div>
+  <div id="logo">
+    <a href="index.html"><img id="logoimg" src="images/logo.png"/></a>
+  </div>
+
+  <!-- BEGIN DESKTOP HEADER -->
+  <div id="navbar">
+    <a class="item" href="index.html">HOME</a>
+    <a class="active item" href="#">ABOUT</a>
+    <a class="item" href="visit.html">VISIT</a>
+    <a class="nav-products item">
+      PRODUCTS
+      <i class="dropdown icon"></i>
+    </a>
+    <div class="ui popup bottom right transition hidden">
+      <div class="ui link list">
+        <a class="item">Estate & Vintage</a>
+        <a class="item">Artists</a>
+        <a class="item">Rings</a>
+        <a class="item">Earrings</a>
+        <a class="item">Linda's Favorites</a>
+        <a class="item">Scarves</a>
+        <a class="item">Necklaces</a>
+        <a class="item">Deals</a>
+      </div>
+    </div>
+    <a class="item" href="faq.html">FAQ</a>
+  </div> 
 </header>
 <!-- END HEADER -->
-
 
 <div class="pusher">
 
@@ -140,6 +148,15 @@
     });
     $('.ui.dropdown').dropdown();
     $('.ui.accordion').accordion();
+    $('.nav-products').popup({
+      inline   : true,
+      hoverable: true,
+      position : 'bottom right',
+      delay: {
+        show: 300,
+        hide: 800
+      }
+    });
   </script>
 
 
