--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     });
   </script>
 
-<!-- BEGIN HEADER -->
+<!-- BEGIN MOBILE HEADER -->
 <div class="ui left inverted vertical menu sidebar">
-  <a class="active menu-item first-item">
-    Menu
+  <a class="menu-item first-item" href="#">
+    Home
   </a>
   <a class="menu-item" href="about.html">
     About
@@ -93,14 +93,37 @@
   </a>
 </div>
 
-
 <header>
   <div id="show-sidebar" class="button toggler">
     MENU
-  </div> 
+  </div>
   <div id="logo">
     <a href="index.html"><img id="logoimg" src="images/logo.png"/></a>
   </div>
+
+  <!-- BEGIN DESKTOP HEADER -->
+  <div id="navbar">
+    <a class="active item">HOME</a>
+    <a class="item" href="about.html">ABOUT</a>
+    <a class="item" href="visit.html">VISIT</a>
+    <a class="nav-products item">
+      PRODUCTS
+      <i class="dropdown icon"></i>
+    </a>
+    <div class="ui popup bottom right transition hidden">
+      <div class="ui link list">
+        <a class="item">Estate & Vintage</a>
+        <a class="item">Artists</a>
+        <a class="item">Rings</a>
+        <a class="item">Earrings</a>
+        <a class="item">Linda's Favorites</a>
+        <a class="item">Scarves</a>
+        <a class="item">Necklaces</a>
+        <a class="item">Deals</a>
+      </div>
+    </div>
+    <a class="item" href="faq.html">FAQ</a>
+  </div> 
 </header>
 <!-- END HEADER -->
 
@@ -254,6 +277,15 @@
 
       $('.ui.dropdown').dropdown();
       $('.ui.accordion').accordion();
+      $('.nav-products').popup({
+        inline   : true,
+        hoverable: true,
+        position : 'bottom right',
+        delay: {
+          show: 300,
+          hide: 800
+        }
+      });
     });
   </script>
 
