--- a/estatevintage.html
+++ b/estatevintage.html
@@ -12,7 +12,30 @@
 
   <title>Jewels By The Sea</title>
 
+  <script src="classie.js"></script>
+  <script>
+    function init() {
+        window.addEventListener('scroll', function(e){
+            var distanceY = window.pageYOffset || document.documentElement.scrollTop,
+                shrinkOn = 250,
+                logo = document.querySelector("#logoimg"),
+                toTop = document.querySelector("#toTop");
 
+            if (distanceY > shrinkOn) {
+                classie.add(logo,"smaller");
+                classie.add(toTop, "show");
+            } else {
+                if (classie.has(logo,"smaller")) {
+                    classie.remove(logo,"smaller");
+                }
+                if(classie.has(toTop, "show")) {
+                  classie.remove(toTop, "show");
+                }
+            }
+        });
+    }
+    window.onload = init();
+  </script>
 </head>
 
 <body>
@@ -27,38 +50,73 @@
 
   </script>
 
+<!-- BEGIN MOBILE HEADER -->
 <div class="ui left inverted vertical menu sidebar">
-  <div class="item menu-opener">
-    <div id="hide-sidebar" class="button">
-      <i class="sidebar icon"></i>
-    </div>
-  </div>
-  <a class="item" href="index.html">
+  <a class="menu-item first-item" href="index.html">
     Home
   </a>
-  <a class="item" href="about.html">
+  <a class="menu-item" href="about.html">
     About
   </a>
-  <a class="item" href="visit.html">
+  <a class="menu-item" href="visit.html">
     Visit Us
   </a>
-  <a class="active item" href="index.html#products">
-    Products
-  </a>
-  <a class="item" href="faq.html">
+  <div class="ui vertical fluid accordion menu-item">
+    <div class="title">
+      Products
+      <i class="dropdown icon" style="float:right"></i>
+    </div>
+    <div class="content">
+      <a class="item secondary" href="estatevintage.html">Estate & Vintage</a>
+      <a class="item secondary" href="artists.html">Artists</a>
+      <a class="item secondary" href="rings.html">Rings</a>
+      <a class="item secondary" href="earrings.html">Earrings</a>
+      <a class="item secondary" href="favorites.html">Linda's Favorites</a>
+      <a class="item secondary" href="bracelets.html">Bracelets</a>
+      <a class="item secondary" href="scarves.html">Scarves</a>
+      <a class="item secondary" href="necklaces.html">Necklaces & Pendants</a>
+      <a class="item secondary" href="deals.html">Deals</a>
+    </div>
+  </div>
+
+  <a class="menu-item" href="faq.html">
     FAQ
   </a>
 </div>
-
 
 <header>
   <div id="show-sidebar" class="button toggler">
     MENU
   </div>
   <div id="logo">
-    <a href="index.html"><img src="images/logo.png" /></a>
+    <a href="index.html"><img id="logoimg" src="images/logo.png"/></a>
   </div>
+
+  <!-- BEGIN DESKTOP HEADER -->
+  <div id="navbar">
+    <a class="item" href="index.html">HOME</a>
+    <a class="item" href="#">ABOUT</a>
+    <a class="item" href="visit.html">VISIT</a>
+    <a class="active nav-products item">
+      PRODUCTS
+      <i class="dropdown icon"></i>
+    </a>
+    <div class="ui popup bottom right transition hidden">
+      <div class="ui link list">
+        <a class="item">Estate & Vintage</a>
+        <a class="item">Artists</a>
+        <a class="item">Rings</a>
+        <a class="item">Earrings</a>
+        <a class="item">Linda's Favorites</a>
+        <a class="item">Scarves</a>
+        <a class="item">Necklaces</a>
+        <a class="item">Deals</a>
+      </div>
+    </div>
+    <a class="item" href="faq.html">FAQ</a>
+  </div> 
 </header>
+<!-- END HEADER -->
 
 
 <div class="pusher">
@@ -112,7 +170,10 @@
     </div>
   </div>
 
-<a href="#0" id="toTop"><i class="chevron up icon"></i> <br />Back to Top</a>
+<a href="#0" id="toTop">
+  &nbsp;<i class="chevron up icon"></i> <br />
+  <span class="topText">Back To Top</span>
+</a>
 
 <div class="ui modal item1">
   <i class="close icon"></i>
@@ -140,24 +201,6 @@
             header = document.querySelector("header"),
             toTop = document.getElementById("toTop");
 
-        /*
-        window.addEventListener('scroll', function(e){
-          console.log(distanceY);
-          if (distanceY > shrinkOn) {
-              console.log('YEAH');
-              classie.add(header,"smaller");
-              classie.add(toTop, "show");
-          } else {
-              console.log('NOPE');
-              if (classie.has(header,"smaller")) {
-                  classie.remove(header,"smaller");
-              }
-              if( classie.has(toTop,"show")) {
-                classie.remove(toTop, "show");
-              }
-          }
-        });
-        */
 
         //smooth scroll to top
         $(toTop).on('click', function(event){
@@ -177,6 +220,15 @@
 
       $('.ui.dropdown').dropdown();
       $('.ui.accordion').accordion();
+      $('.nav-products').popup({
+        inline   : true,
+        hoverable: true,
+        position : 'bottom right',
+        delay: {
+          show: 300,
+          hide: 800
+        }
+      });
   </script>
 
 </body>
