--- a/about.html
+++ b/about.html
@@ -95,14 +95,15 @@
     </a>
     <div class="ui popup bottom right transition hidden">
       <div class="ui link list">
-        <a class="item">Estate & Vintage</a>
-        <a class="item">Artists</a>
-        <a class="item">Rings</a>
-        <a class="item">Earrings</a>
-        <a class="item">Linda's Favorites</a>
-        <a class="item">Scarves</a>
-        <a class="item">Necklaces</a>
-        <a class="item">Deals</a>
+        <a class="item" href="estatevintage.html">Estate & Vintage</a>
+        <a class="item" href="artists.html">Artists</a>
+        <a class="item" href="rings.html">Rings</a>
+        <a class="item" href="earrings.html">Earrings</a>
+        <a class="item" href="favorites.html">Linda's Favorites</a>
+        <a class="item" href="bracelets.html">Bracelets</a>
+        <a class="item" href="scarves.html">Scarves</a>
+        <a class="item" href="necklaces.html">Necklaces & Pendants</a>
+        <a class="item" href="deals.html">Deals</a>
       </div>
     </div>
     <a class="item" href="faq.html">FAQ</a>
