--- a/estatevintage.html
+++ b/estatevintage.html
@@ -103,14 +103,15 @@
     </a>
     <div class="ui popup bottom right transition hidden">
       <div class="ui link list">
-        <a class="item">Estate & Vintage</a>
-        <a class="item">Artists</a>
-        <a class="item">Rings</a>
-        <a class="item">Earrings</a>
-        <a class="item">Linda's Favorites</a>
-        <a class="item">Scarves</a>
-        <a class="item">Necklaces</a>
-        <a class="item">Deals</a>
+        <a class="item" href="estatevintage.html">Estate & Vintage</a>
+        <a class="item" href="artists.html">Artists</a>
+        <a class="item" href="rings.html">Rings</a>
+        <a class="item" href="earrings.html">Earrings</a>
+        <a class="item" href="favorites.html">Linda's Favorites</a>
+        <a class="item" href="bracelets.html">Bracelets</a>
+        <a class="item" href="scarves.html">Scarves</a>
+        <a class="item" href="necklaces.html">Necklaces & Pendants</a>
+        <a class="item" href="deals.html">Deals</a>
       </div>
     </div>
     <a class="item" href="faq.html">FAQ</a>
@@ -143,7 +144,110 @@
 
       <div class="eleven wide column">
   
-        <div id="productGrid"></div>
+        <div id="productGrid">
+          <!-- Row 1 -->
+          <div class="column">
+            <div id="item1" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/1-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">ART NOUVEAU STYLE CUFF</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item2" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/2-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">ONYX & MARCASITE RING</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item3" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/3-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">HOBE GOLD-TONE BRACELET</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item4" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/4-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">LAVALIER CHAIN</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item5" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/5-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">SIGNED COPPER NECKLACE</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item6" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/6-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">SAPPHIRE RING</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item7" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/7-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">SHORT NECKLACE</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item8" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/8-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">SILVER EARRINGS</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column">
+            <div id="item9" class="ui card">
+              <div class="image">
+                <img src="images/estatevintage/9-thumb.png">
+              </div>
+              <div class="content">
+                <a class="header">PAINTED BUTTONS</a>
+              </div>
+            </div>
+          </div>
+
+      </div>
+
+
 
         <div class="ui centered grid">
           <div class="sixteen wide column">
@@ -154,8 +258,8 @@
               <div class="default text">Estate & Vintage</div>
               <div class="menu">
                 <!--<div class="item"><a class="" href="#">Estate & Vintage</a></div>-->
-                <div class="item"><a class="" href="local.html">Local Artists</a></div>
-                <div class="item"><a class="" href="worldwide.html">Worldwide Artists</a></div>
+                <div class="item"><a class="" href="artists.html">Artists</a></div>
+                <div class="item"><a class="" href="rings.html">Rings</a></div>
                 <div class="item"><a class="" href="earrings.html">Earrings</a></div>
                 <div class="item"><a class="" href="bracelets.html">Bracelets</a></div>
                 <div class="item"><a class="" href="scarves.html">Scarves</a></div>
@@ -166,6 +270,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </div>
   </div>
@@ -178,11 +283,116 @@
 <div class="ui modal item1">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui image" src="images/favorites/1-full.png">
+    <img class="ui centered image" src="images/estatevintage/1-full.png">
     <div class="item-desc">
-      <p class="item-title">Sterling Silver Art Nouveau Cuff</p>
-      <p class="item-subtitle">Circa 1960</p>
+      <p class="item-title">Sterling Silver Art Nouveau Design Cuff</p>
+      <p class="item-subtitle">Circa 1960.</p>
       <p class="item-price">$299.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item2">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/2-full.png">
+    <div class="item-desc">
+      <p class="item-title">Onyx & Marcasite Ring</p>
+      <p class="item-subtitle">Sterling silver onyx and marcasite ring. Circa 1970.</p>
+      <p class="item-price">$89.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item3">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/3-full.png">
+    <div class="item-desc">
+      <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
+      <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet. Circa 1950.</p>
+      <p class="item-price">$129.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item4">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/4-full.png">
+    <div class="item-desc">
+      <p class="item-title">10 Karat Yellow Gold Lavalier Chain</p>
+      <p class="item-subtitle">With seed pearl and synthetic spinel on a gold filled chain. Circa 1920.</p>
+      <p class="item-price">$229.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item5">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/5-full.png">
+    <div class="item-desc">
+      <p class="item-title">Signed Renoir of California Copper Necklace</p>
+      <p class="item-subtitle">Circa 1960.</p>
+      <p class="item-price">$129.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item6">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/6-full.png">
+    <div class="item-desc">
+      <p class="item-title">18 Karat Yellow Gold Art Deco Sapphire Ring</p>
+      <p class="item-subtitle">Circa 1920.</p>
+      <p class="item-price">$1,119.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item7">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/7-full.png">
+    <div class="item-desc">
+      <p class="item-title">Four Strand Adjustable Short Necklace</p>
+      <p class="item-subtitle">Circa 1950.</p>
+      <p class="item-price">$49.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+
+<div class="ui modal item8">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/8-full.png">
+    <div class="item-desc">
+      <p class="item-title">Sterling Silver Lapis Earrings</p>
+      <p class="item-subtitle">Circa 1970.</p>
+      <p class="item-price">$39.00</p>
+      <button class="ui blue button">Inquire</button>
+    </div>
+ </div>
+</div>
+
+<div class="ui modal item9">
+  <i class="close icon"></i>
+  <div class="content">
+    <img class="ui centered image" src="images/estatevintage/9-full.png">
+    <div class="item-desc">
+      <p class="item-title">Hand Painted Buttons</p>
+      <p class="item-subtitle">Set of 6. Circa 1960.</p>
+      <p class="item-price">$39.00</p>
       <button class="ui blue button">Inquire</button>
     </div>
  </div>
@@ -192,7 +402,6 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src="classie.js"></script>
 <script src='http://oss.maxcdn.com/semantic-ui/2.1.4/semantic.min.js'></script>
-<script src='js/product_display.js'></script>
 <script src='app.js'></script>
 <script>
       function init() {
