--- a/faq.html
+++ b/faq.html
@@ -102,14 +102,15 @@
     </a>
     <div class="ui popup bottom right transition hidden">
       <div class="ui link list">
-        <a class="item">Estate & Vintage</a>
-        <a class="item">Artists</a>
-        <a class="item">Rings</a>
-        <a class="item">Earrings</a>
-        <a class="item">Linda's Favorites</a>
-        <a class="item">Scarves</a>
-        <a class="item">Necklaces</a>
-        <a class="item">Deals</a>
+        <a class="item" href="estatevintage.html">Estate & Vintage</a>
+        <a class="item" href="artists.html">Artists</a>
+        <a class="item" href="rings.html">Rings</a>
+        <a class="item" href="earrings.html">Earrings</a>
+        <a class="item" href="favorites.html">Linda's Favorites</a>
+        <a class="item" href="bracelets.html">Bracelets</a>
+        <a class="item" href="scarves.html">Scarves</a>
+        <a class="item" href="necklaces.html">Necklaces & Pendants</a>
+        <a class="item" href="deals.html">Deals</a>
       </div>
     </div>
     <a class="active item" href="faq.html">FAQ</a>
@@ -126,9 +127,9 @@
   
     <div class="ui basic segment center aligned">
     <div class="ui medium images">
-      <img class="ui image" src="images/faq1.jpg">
-      <img class="ui image" src="images/faq2.jpg">
-      <img class="ui image" src="images/faq3.jpg">
+      <img class="ui image" src="images/faq1.png">
+      <img class="ui image" src="images/faq2.png">
+      <img class="ui image" src="images/faq3.png">
     </div>
   </div>
 
