--- a/local.html
+++ b/local.html
@@ -93,8 +93,8 @@
 <div class="pusher">
   <!-- Main Content -->
   <div class="ui main container">
-    <h1 class="script">Local Artists</h1> 
-    <p><i class="fa fa-quote-left fa-2x quote"></i><i>Local artists create jewelry that is unique and makes a wonderful souvenir of a trip to La Jolla!</i></p>   
+    <h1 class="script">Artists</h1> 
+    <p><i class="fa fa-quote-left fa-2x quote"></i><i>From right here in La Jolla to distant countries across the world, artists create jewelry that is unique and makes a wonderful souvenir!</i></p>   
     <div class="ui stackable grid">
 
       <div class="five wide column">
