Fixed visit image

--- a/visit.html
+++ b/visit.html
@@ -140,11 +140,11 @@
         <div class="ui basic segment center aligned">
           <p>I am in the store later than 6pm on most nights, and I am happy to set up an appointment with you at any mutually agreeable time - just <a href="tel:8584595166">give me a call!</a></p>
 
-          <p>1237 Prospect Street, Suite B<br /> La Jolla, CA 92037</p>
-          <p><a href="tel:8584595166"><i class="phone icon"></i>858.459.5166</a></p>
-          <p style="letter-spacing:2px">
-            <a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-envelope-o"></i> linda@jewelsbythesea.biz</a>
-          </p>
+          <p>1237 Prospect Street, Suite B<br /> La Jolla, CA 92037
+          <br /><a href="tel:8584595166"><i class="phone icon"></i>858.459.5166</a>
+          <br />
+          <a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-envelope-o"></i> linda@jewelsbythesea.biz</a>
+          
         </div>
 
       </div>
