--- a/faq.html
+++ b/faq.html
@@ -125,13 +125,13 @@
     
     <h3 class="script">Frequently Asked Questions</h3>
   
-    <div class="ui basic segment center aligned">
-    <div class="ui medium images">
-      <img class="ui image" src="images/faq1.png">
-      <img class="ui image" src="images/faq2.png">
-      <img class="ui image" src="images/faq3.png">
+    <div id="faqimg" class="ui basic segment center aligned">
+      <div class="ui medium images">
+        <img class="ui image" src="images/faq1.png">
+        <img class="ui image" src="images/faq2.png">
+        <img class="ui image" src="images/faq3.png">
+      </div>
     </div>
-  </div>
 
     <div class="faq-container">
     <div class="ui list faq-list div-center">
