actually demo ready now

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
         </div>
 
         <div class="ui basic center aligned segment">
-          <a href="about.html">Graduate gemologist</a>, expert <a href="faq.html#3">jewelry repair</a>, exceptional customer service.
+          <a href="faq.html#4">Graduate gemologist</a>, expert <a href="faq.html#3">jewelry repair</a>, exceptional customer service. 
         </div>
 
         <div class="ui basic center aligned segment">
@@ -250,7 +250,8 @@
         </div>
 
         <div class="ui basic center aligned segment">
-            <a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-5x"></i></a> &nbsp;<a href=""><i class="fa fa-facebook-square fa-5x"></i></a> &nbsp;<a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-envelope-o fa-5x"></i></a>
+            <p><a href="http://www.yelp.com/biz/jewels-by-the-sea-la-jolla"><i class="fa fa-yelp fa-5x"></i></a> &nbsp;<a href=""><i class="fa fa-facebook-square fa-5x"></i></a> &nbsp;<a href="mailto:linda@jewelsbythesea.biz"><i class="fa fa-envelope-o fa-5x"></i></a></p>
+            <p>Jewels By The Sea thanks you for shopping small!</p>
         </div>
       </div>
     </div>
