Added in image files

--- a/favorites.html
+++ b/favorites.html
@@ -144,7 +144,7 @@
 
       <div class="eleven wide column">
   
-        <div id="productGrid">
+        <div class="three column doubling ui grid center aligned">
           <!-- Row 1 -->
           <div class="column">
             <div id="item1" class="ui card">
@@ -283,7 +283,7 @@
 <div class="ui modal item1">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/1-full.png">
+    <img class="ui centered medium image" src="images/favorites/1-full.png">
     <div class="item-desc">
       <p class="item-title">Whimsical Octopus Pendant</p>
       <p class="item-subtitle">Lovely pendant/brooch on strap.</p>
@@ -296,7 +296,7 @@
 <div class="ui modal item2">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/2-full.png">
+    <img class="ui centered medium image" src="images/favorites/2-full.png">
     <div class="item-desc">
       <p class="item-title">Seahorse Pendant</p>
       <p class="item-subtitle">Handmade, 6" high sterling silver seahorse &mdash; guaranteed compliments!</p>
@@ -309,7 +309,7 @@
 <div class="ui modal item3">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/3-full.png">
+    <img class="ui centered medium image" src="images/favorites/3-full.png">
     <div class="item-desc">
       <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
       <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet. Circa 1950.</p>
@@ -322,7 +322,7 @@
 <div class="ui modal item4">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/4-full.png">
+    <img class="ui centered medium image" src="images/favorites/4-full.png">
     <div class="item-desc">
       <p class="item-title">Fire Opal & Lapis Ring</p>
       <p class="item-subtitle">Sterling silver inlay fire opal and lapis.</p>
@@ -335,7 +335,7 @@
 <div class="ui modal item5">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/5-full.png">
+    <img class="ui centered medium image" src="images/favorites/5-full.png">
     <div class="item-desc">
       <p class="item-title">Sculptural Starfish Necklace</p>
       <p class="item-subtitle">Sculptural sterling silver starfish on chain.</p>
@@ -348,7 +348,7 @@
 <div class="ui modal item6">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/6-full.png">
+    <img class="ui centered medium image" src="images/favorites/6-full.png">
     <div class="item-desc">
       <p class="item-title">Peacock Brooch</p>
       <p class="item-subtitle">Major bling (5" high!) peacock brooch.</p>
@@ -361,7 +361,7 @@
 <div class="ui modal item7">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/7-full.png">
+    <img class="ui centered medium image" src="images/favorites/7-full.png">
     <div class="item-desc">
       <p class="item-title">Victorian Serpent with Cat’s Eye Ring</p>
       <p class="item-subtitle">18 karat yellow gold Victorian serpent/dragon design complete with cat’s eye.</p>
@@ -375,7 +375,7 @@
 <div class="ui modal item8">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/8-full.png">
+    <img class="ui centered medium image" src="images/favorites/8-full.png">
     <div class="item-desc">
       <p class="item-title">Handmade Aluminum Earrings</p>
       <p class="item-subtitle">Lightweight and artistic.</p>
@@ -388,7 +388,7 @@
 <div class="ui modal item9">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/favorites/9-full.png">
+    <img class="ui centered medium image" src="images/favorites/9-full.png">
     <div class="item-desc">
       <p class="item-title">Tree of Life Set</p>
       <p class="item-subtitle">Sterling silver "Tree of Life" necklace and earrings. Comes as a set.</p>
