--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <div class="ui stackable grid">
       <div class="eleven wide column home-grid">
 
-        <div id="productGrid" class="">
+        <div class="three column doubling ui grid center aligned">
           <!-- Row 1 -->
           <div class="column product-item">
 
@@ -190,7 +190,7 @@
             <div class="ui card">
               <div class="grid-hover">Bracelets</div>
               <a class="image grid-hover-img" href="bracelets.html">
-                <img src="images/bracelets/5-thumb.png">
+                <img src="images/bracelets/4-thumb.png">
               </a>
             </div>
           </div>
@@ -200,7 +200,7 @@
             <div class="ui card">
               <div class="grid-hover">Scarves</div>
               <a class="image grid-hover-img" href="scarves.html">
-                <img src="images/scarves/4-thumb.png">
+                <img src="images/scarves/7-thumb.png">
               </a>
             </div>
           </div>
