--- a/estatevintage.html
+++ b/estatevintage.html
@@ -95,7 +95,7 @@
   <!-- BEGIN DESKTOP HEADER -->
   <div id="navbar">
     <a class="item" href="index.html">HOME</a>
-    <a class="item" href="#">ABOUT</a>
+    <a class="item" href="about.html">ABOUT</a>
     <a class="item" href="visit.html">VISIT</a>
     <a class="active nav-products item">
       PRODUCTS
@@ -144,7 +144,7 @@
 
       <div class="eleven wide column">
   
-        <div id="productGrid">
+        <div class="three column doubling ui grid center aligned">
           <!-- Row 1 -->
           <div class="column">
             <div id="item1" class="ui card">
@@ -257,15 +257,15 @@
               <i class="dropdown icon"></i>
               <div class="default text">Estate & Vintage</div>
               <div class="menu">
-                <!--<div class="item"><a class="" href="#">Estate & Vintage</a></div>-->
-                <div class="item"><a class="" href="artists.html">Artists</a></div>
-                <div class="item"><a class="" href="rings.html">Rings</a></div>
-                <div class="item"><a class="" href="earrings.html">Earrings</a></div>
-                <div class="item"><a class="" href="bracelets.html">Bracelets</a></div>
-                <div class="item"><a class="" href="scarves.html">Scarves</a></div>
-                <div class="item"><a class="" href="necklaces.html">Necklaces & Pendants</a></div>
-                <div class="item"><a class="" href="favorites.html">Linda's Favorites</a></div>
-                <div class="item"><a class="" href="deals.html">Deals</a></div>
+                <!--<a class="item" href="estatevintage.html">Estate & Vintage</a>-->
+                <a class="item" href="artists.html">Artists</a>
+                <a class="item" href="rings.html">Rings</a>
+                <a class="item" href="earrings.html">Earrings</a>
+                <a class="item" href="bracelets.html">Bracelets</a>
+                <a class="item" href="scarves.html">Scarves</a>
+                <a class="item" href="necklaces.html">Necklaces & Pendants</a>
+                <a class="item" href="favorites.html">Linda's Favorites</a>
+                <a class="item" href="deals.html">Deals</a>
               </div>
             </div>
           </div>
@@ -283,7 +283,7 @@
 <div class="ui modal item1">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/1-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/1-full.png">
     <div class="item-desc">
       <p class="item-title">Sterling Silver Art Nouveau Design Cuff</p>
       <p class="item-subtitle">Circa 1960.</p>
@@ -296,7 +296,7 @@
 <div class="ui modal item2">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/2-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/2-full.png">
     <div class="item-desc">
       <p class="item-title">Onyx & Marcasite Ring</p>
       <p class="item-subtitle">Sterling silver onyx and marcasite ring. Circa 1970.</p>
@@ -309,7 +309,7 @@
 <div class="ui modal item3">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/3-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/3-full.png">
     <div class="item-desc">
       <p class="item-title">'Hobe' Gold-Tone Bracelet</p>
       <p class="item-subtitle">Signed 'Hobe' gold tone and crystal bracelet. Circa 1950.</p>
@@ -322,7 +322,7 @@
 <div class="ui modal item4">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/4-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/4-full.png">
     <div class="item-desc">
       <p class="item-title">10 Karat Yellow Gold Lavalier Chain</p>
       <p class="item-subtitle">With seed pearl and synthetic spinel on a gold filled chain. Circa 1920.</p>
@@ -335,7 +335,7 @@
 <div class="ui modal item5">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/5-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/5-full.png">
     <div class="item-desc">
       <p class="item-title">Signed Renoir of California Copper Necklace</p>
       <p class="item-subtitle">Circa 1960.</p>
@@ -348,7 +348,7 @@
 <div class="ui modal item6">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/6-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/6-full.png">
     <div class="item-desc">
       <p class="item-title">18 Karat Yellow Gold Art Deco Sapphire Ring</p>
       <p class="item-subtitle">Circa 1920.</p>
@@ -361,7 +361,7 @@
 <div class="ui modal item7">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/7-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/7-full.png">
     <div class="item-desc">
       <p class="item-title">Four Strand Adjustable Short Necklace</p>
       <p class="item-subtitle">Circa 1950.</p>
@@ -375,7 +375,7 @@
 <div class="ui modal item8">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/8-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/8-full.png">
     <div class="item-desc">
       <p class="item-title">Sterling Silver Lapis Earrings</p>
       <p class="item-subtitle">Circa 1970.</p>
@@ -388,7 +388,7 @@
 <div class="ui modal item9">
   <i class="close icon"></i>
   <div class="content">
-    <img class="ui centered image" src="images/estatevintage/9-full.png">
+    <img class="ui centered medium image" src="images/estatevintage/9-full.png">
     <div class="item-desc">
       <p class="item-title">Hand Painted Buttons</p>
       <p class="item-subtitle">Set of 6. Circa 1960.</p>
